# cc-glue-vpc

./: .gitignore  .prettierrc  GlueVpcArticle.drawio  cdktf.json  main.ts  package-lock.json  package.json  tsconfig.json
__tests__/: main-test.ts
glue_scripts/: .flake8  README.md  pyproject.toml
glue_scripts/glue_job_lib/: data_generation.py
glue_scripts/jobs/: generate_data_to_rds.py
glue_scripts/tests/: test_data_generation.py
infra/: cdktf.json  jest.config.js  main.ts  package.json  tsconfig.json
lambda/: package.json
