[tool.poetry]
name = "glue-scripts"
version = "0.1.0"
description = ""
authors = ["Alexander Kasper <alexander.kasper@codecentric.de>"]
readme = "README.md"
packages = [{include = "glue_job_lib"}]

[tool.poetry.dependencies]
python = "^3.11"
awswrangler = "^3.2.1"
pg8000 = "^1.29.7"

[tool.poetry.group.dev.dependencies]
pandas = "^2.0.2"
flake8 = "^6.0.0"
flake8-unused-arguments = "^0.0.13"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
