[tool.poetry]
name = "glue-scripts"
version = "0.1.0"
description = ""
authors = ["Alexander Kasper <alexander.kasper@codecentric.de>"]
readme = "README.md"
packages = [{include = "glue_job_lib"}]

[tool.poetry.dependencies]
python = "3.9.10"

[tool.poetry.group.dev.dependencies]
pandas = "1.4.2"
awswrangler = "2.15.1"
psycopg2 = "2.9.3"
flake8 = "^6.0.0"
flake8-unused-arguments = "^0.0.13"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
